--- a/mmpe-frontend/src/app/components/login/login.component.html
+++ b/mmpe-frontend/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
     </div>
     <div>{{notFound}}</div>
     <p>
-      <input type="submit" value="submit">
+      <input type="submit" id="submit" value="submit">
     </p>
   </form>
 </div>
