--- a/mmpe-frontend/src/app/components/segment-detail/segment-detail.component.scss
+++ b/mmpe-frontend/src/app/components/segment-detail/segment-detail.component.scss
@@ -193,7 +193,33 @@ div#mainDivTools {
   font-size: xx-large;
 }
 
-html,body {padding:0;margin:0;}
+
+/* start CSS for Master Thesis Project */
+/* .cstm-popup-div {
+  border: 1px solid;
+  background-color: white;
+  
+  margin-left: -489px;
+  //transform: translate(100px, 200px);
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 50%;
+  overflow-y: scroll;
+}
+ .cstm-popup-div ::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+.cstm-popup-div ::-webkit-scrollbar-thumb {
+  background: red;
+}
+
+.cstm-popup-div ::-webkit-scrollbar-track {
+  background: red;
+}  */
+
+/* html,body {padding:0;margin:0;}
 .wrap {
   font:12px Arial, san-serif;
 }
@@ -268,5 +294,4 @@ form .likert_ li input[type=radio] {
   margin-left:-6px;
   
 }
-form .likert_ li label {width:100%;}
-
+form .likert_ li label {width:100%;} */
